--- a/public/home/css/cards.css
+++ b/public/home/css/cards.css
@@ -113,6 +113,7 @@ h4 i.iconfont {
     width: 25px;
     height: 25px;
     line-height: 25px;
+    margin: 0 0 0 5px;
 }
 
 .text-content .icon,.iconfont,span{
