--- a/admin/view/platform/index.html
+++ b/admin/view/platform/index.html
@@ -77,6 +77,8 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
+        overflow-y: hidden;
+        overflow-x: scroll;
     }
 
     .acc_list_ul li {
