--- a/home/view/layout.html
+++ b/home/view/layout.html
@@ -8,11 +8,19 @@
 
     <link rel="stylesheet" href="<{PUBLIC_PATH}>common/css/icon.css" type="text/css">
     <link rel="stylesheet" href="<{PUBLIC_PATH}>common/layui/css/layui.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1877015_8fqwkv39vvc.css" type="text/css" >
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1877015_iktc5tvkpxm.css" type="text/css" >
     <link rel="stylesheet" href="<{PUBLIC_PATH}>common/css/common.css" type="text/css">
     <link rel="stylesheet" href="<{PUBLIC_PATH}>home/css/common.css" type="text/css">
     <link rel="stylesheet" href="<{PUBLIC_PATH}>home/css/cards.css" type="text/css">
     <{block name="myStyles"}> <{/block}>
+    <style type="text/css">
+        #admin_icon {
+            color: #979898;
+        }
+        #admin_icon:hover {
+            color: #ffffff;
+        }
+    </style>
 </head>
 
 <body>
@@ -32,7 +40,7 @@
         <div class="mod-logo" style="padding: 0">
             <div class="as-menu1" style="width: 50px;height: 50px; float: left; margin: 0">
                 <button class="btn btn-sm mod-head-btn pull-left" style="padding: 0px; width: 50px; border-right:0">
-                    <i title="后台" style="cursor:pointer;" onclick="toAdmin()" class="iconfont icon-houtaituichufanhuichu"></i>
+                    <i id="admin_icon" title="后台" style="cursor:pointer;" onclick="toAdmin()" class="iconfont icon-ziyuan143"></i>
                 </button>
             </div>
             <div style="font:20px 'microsoft yahei';color: white;height: 55px;line-height: 55px;padding-left: 30px">账号管家</div>
