--- a/public/common/css/icon.css
+++ b/public/common/css/icon.css
@@ -2,18 +2,11 @@
 	font-family: 'icomoon';
 	src:url('../fonts/icomoon.eot?npzd73');
 	src:url('../fonts/icomoon.eot?#iefixnpzd73') format('embedded-opentype'),
-		url('../fonts/icomoon.woff?npzd73') format('woff'),
-		url('../fonts/icomoon.ttf?npzd73') format('truetype'),
+		url('../fonts/icomoon.woff?npzd73') format('woff');
 		url('../fonts/icomoon.svg?npzd73#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
-
-@font-face {
-	font-family: HUPOFont;
-	src: url('../fonts/STHUPO.ttf');
-}
-
 
 [class^="icon-"], [class*=" icon-"] {
 	font-family: 'icomoon';
